--- a/registretion.html
+++ b/registretion.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="ent.css">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>КиберОлимп</title>
 </head>
 <body>
@@ -31,13 +31,25 @@
         <form id="RegistrForm">
             <fieldset>
                 <h2>Регистрация</h2>
-                <input type="email" name="Login" class="space" placeholder="Email" required>
+                <input type="email" name="Login" class="space" placeholder="Email" maxlength="50" required>
                 <br>
-                <input type="text" name="Login" class="space" placeholder="Login" required>
+                <input type="text" name="Login" class="space" placeholder="Login" maxlength = "25"required>
                 <br>
-                <input type="password" name="Password" class="space" placeholder="Password" required>
+                <div style="position: relative; display: inline-block;">
+                    <input type="password" name="Password" id="password" class="space" placeholder="Password" maxlength="50" required>
+                    <i class="fas fa-eye password-toggle" id="togglePassword" style="position: absolute; right: 15px; top: 50%; transform: translateY(-50%); cursor: pointer;"></i>
+                </div>
                 <br>
-                <input type="password" name="Password" class="space" placeholder="Confirm password" required>
+                <div style="position: relative; display: inline-block;">
+                    <input type="password" name="ConfirmPassword" id="confirmPassword" class="space" placeholder="Confirm password" maxlength="50" required>
+                    <i class="fas fa-eye password-toggle" id="toggleConfirmPassword" style="position: absolute; right: 15px; top: 50%; transform: translateY(-50%); cursor: pointer;"></i>
+                </div>
+                <div id="error-message">Пароли не совпадают!</div>
+                <br>
+                <div class="remember-me">
+                    <input type="checkbox" id="remember" class="space" required>
+                    <label for="remember">Запомнить меня</label>
+                </div>
                 <br>
                 <a href="entrance.html">Авторизация</a>
                 <br>
@@ -76,10 +88,57 @@
         </div>
     </footer>
     <script>
-        // Обработчик отправки формы
-        document.getElementById('RegistrForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Отменяем стандартное поведение формы
-            window.location.href = 'entrance.html';
+        const passwordInput = document.getElementById('password');
+        const confirmPasswordInput = document.getElementById('confirmPassword');
+        const errorMessage = document.getElementById('error-message');
+        const form = document.getElementById('RegistrForm');
+        const togglePassword = document.getElementById('togglePassword');
+        const toggleConfirmPassword = document.getElementById('toggleConfirmPassword');
+
+        // Переключение видимости пароля
+        togglePassword.addEventListener('click', function() {
+            togglePasswordVisibility(passwordInput, togglePassword);
+        });
+
+        toggleConfirmPassword.addEventListener('click', function() {
+            togglePasswordVisibility(confirmPasswordInput, toggleConfirmPassword);
+        });
+
+        function togglePasswordVisibility(input, icon) {
+            if (input.type === 'password') {
+                input.type = 'text';
+                icon.classList.replace('fa-eye', 'fa-eye-slash');
+            } else {
+                input.type = 'password';
+                icon.classList.replace('fa-eye-slash', 'fa-eye');
+            }
+        }
+
+        // Динамическая проверка при вводе
+        confirmPasswordInput.addEventListener('input', function() {
+            if (passwordInput.value !== confirmPasswordInput.value) {
+                confirmPasswordInput.classList.add('error');
+                confirmPasswordInput.classList.remove('success');
+                errorMessage.style.display = 'block';
+            } else {
+                confirmPasswordInput.classList.remove('error');
+                confirmPasswordInput.classList.add('success');
+                errorMessage.style.display = 'none';
+            }
+        });
+
+        // Проверка при отправке формы
+        form.addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            if (passwordInput.value !== confirmPasswordInput.value) {
+                confirmPasswordInput.classList.add('error');
+                errorMessage.style.display = 'block';
+                return; // Остановка отправки формы
+            }
+
+            // Если пароли совпадают, перенаправляем
+            window.location.href = 'tour.html';
         });
     </script>
 </body>
