--- a/registretion.html
+++ b/registretion.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="ent.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/ent.css">
+    <link rel="stylesheet" href="styles/mobile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>КиберОлимп</title>
 </head>
@@ -17,7 +18,7 @@
     </video>
 
     <div class="navbar">
-        <img src="Logo/LOGO.png" alt="КиберОлимп">
+        <img src="images/LOGO.png" alt="КиберОлимп">
         <div class="nav-links">
             <a href="tour.html">Турниры</a>
             <a href="forum.html">Форум</a>
@@ -61,7 +62,7 @@
     <footer>
         <div class="footer-section">
             <div class="footer-left">
-                <img src="Logo/LOGO.png" alt="КиберОлимп">
+                <img src="images/LOGO.png" alt="КиберОлимп">
             </div>
         </div>
         <div class="footer-section">
