--- a/tournaments.html
+++ b/tournaments.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/mobile.css">
     <title>КиберОлимп</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <img src="images/Турнир3.jpg" alt="Slide 3">
     </div>
     <div class="navbar">
-        <img src="Logo/LOGO.png" alt="КиберОлимп">
+        <img src="images/LOGO.png" alt="КиберОлимп">
         <div class="nav-links">
             <a href="tour.html">Турниры</a>
             <a href="forum.html">Форум</a>
@@ -117,7 +117,7 @@
     <footer>
         <div class="footer-section">
             <div class="footer-left">
-                <img src="Logo/LOGO.png" alt="КиберОлимп">
+                <img src="images/LOGO.png" alt="КиберОлимп">
             </div>
         </div>
         <div class="footer-section">
