--- a/team.html
+++ b/team.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/mobile.css">
     <title>КиберОлимп</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <img src="images/Турнир3.jpg" alt="Slide 3">
     </div>
     <div class="navbar">
-        <img src="Logo/LOGO.png" alt="КиберОлимп">
+        <img src="images/LOGO.png" alt="КиберОлимп">
         <div class="nav-links">
             <a href="tour.html">Турниры</a>
             <a href="forum.html">Форум</a>
@@ -32,7 +32,7 @@
             <div class="grid-example">
                 <!-- Команда Racoon -->
                 <div class="box">
-                    <img src="LogoTeam/Racoon.jpg">
+                    <img src="images/Racoon.jpg">
                     <h3>Racoon</h3>
                     <p><b>Дисциплина: </b>Marvel Rivals, APEX</p>
                     <button onclick="toggleDetails('racoon')">Подробнее</button>
@@ -49,7 +49,7 @@
 
                 <!-- Команда Horse -->
                 <div class="box">
-                    <img src="LogoTeam/Horse.jpg">
+                    <img src="images/Horse.jpg">
                     <h3>Horse</h3>
                     <p><b>Дисциплина: </b>Rocket League</p>
                     <button onclick="toggleDetails('horse')">Подробнее</button>
@@ -66,7 +66,7 @@
 
                 <!-- Команда Phoenix -->
                 <div class="box">
-                    <img src="LogoTeam/Phoenix.jpg">
+                    <img src="images/Phoenix.jpg">
                     <h3>Phoenix</h3>
                     <p><b>Дисциплина: </b>Dota 2</p>
                     <button onclick="toggleDetails('phoenix')">Подробнее</button>
@@ -83,7 +83,7 @@
 
                 <!-- Команда Shark -->
                 <div class="box">
-                    <img src="LogoTeam/Shark.jpg">
+                    <img src="images/Shark.jpg">
                     <h3>Shark</h3>
                     <p><b>Дисциплина: </b>CS2, Valorant</p>
                     <button onclick="toggleDetails('shark')">Подробнее</button>
@@ -100,7 +100,7 @@
 
                 <!-- Команда Soldier -->
                 <div class="box">
-                    <img src="LogoTeam/Soldier.jpg">
+                    <img src="images/Soldier.jpg">
                     <h3>Soldier</h3>
                     <p><b>Дисциплина: </b>PUBG, Fortnite</p>
                     <button onclick="toggleDetails('soldier')">Подробнее</button>
@@ -121,7 +121,7 @@
     <footer>
         <div class="footer-section">
             <div class="footer-left">
-                <img src="Logo/LOGO.png" alt="КиберОлимп">
+                <img src="images/LOGO.png" alt="КиберОлимп">
             </div>
         </div>
         <div class="footer-section">
