--- a/tour.html
+++ b/tour.html
@@ -1,121 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/tour.css">
-    <link rel="stylesheet" href="styles/mobile.css">
-    <title>КиберОлимп</title>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="styles/styles.css" />
+		<title>КиберОлимп</title>
+	</head>
+	<body>
+		<!-- Слайдер -->
+		<div class="slider">
+			<img src="images/Турнир1.jpg" alt="Slide 1" class="active" />
+			<img src="images/Турнир2.jpg" alt="Slide 2" />
+			<img src="images/Турнир3.jpg" alt="Slide 3" />
+		</div>
 
-    <!-- Слайдер -->
-    <div class="slider">
-        <img src="images/Турнир1.jpg" alt="Slide 1" class="active">
-        <img src="images/Турнир2.jpg" alt="Slide 2">
-        <img src="images/Турнир3.jpg" alt="Slide 3">
-    </div>
+		<header class="header">
+			<img src="images/LOGO.png" alt="КиберОлимп" />
+			<nav class="navbar">
+				<a href="tour.html">Турниры</a>
+				<a href="forum.html">Форум</a>
+				<a href="tournaments.html">Расписание турниров</a>
+				<a href="team.html">Команды</a>
+			</nav>
+			<a href="entrance.html">Вход/Регистрация</a>
+		</header>
 
-    <div class="navbar">
-        <img src="images/LOGO.png" alt="КиберОлимп">
-        <div class="nav-links">
-            <a href="tour.html">Турниры</a>
-            <a href="forum.html">Форум</a>
-            <a href="tournaments.html">Расписание турниров</a>
-            <a href="team.html">Команды</a>
-        </div>
-        <a href="entrance.html">Вход/Регистрация</a>
-    </div>
+		<main class="content" id="ready">
+			<div class="tournaments">
+				<!-- Блок для CS2 -->
+				<section class="tournament-box">
+					<h3>CS2 Турнир</h3>
+					<p>Прими участие в турнире по CS2 и покажи свои навыки!</p>
+					<button onclick="window.location.href='entrance.html'">
+						Участвовать
+					</button>
+				</section>
 
-    <div class="content" id="ready">
-        <div class="tournaments-grid">
-            <!-- Блок для CS2 -->
-            <div class="tournament-box">
-                <h3>CS2 Турнир</h3>
-                <p>Прими участие в турнире по CS2 и покажи свои навыки!</p>
-                <button onclick="window.location.href='entrance.html'">Участвовать</button>
-            </div>
+				<!-- Блок для Dota 2 -->
+				<section class="tournament-box">
+					<h3>Dota 2 Турнир</h3>
+					<p>Собери команду и сражайся за звание чемпиона в Dota 2!</p>
+					<button onclick="window.location.href='entrance.html'">
+						Участвовать
+					</button>
+				</section>
 
-            <!-- Блок для Dota 2 -->
-            <div class="tournament-box">
-                <h3>Dota 2 Турнир</h3>
-                <p>Собери команду и сражайся за звание чемпиона в Dota 2!</p>
-                <button onclick="window.location.href='entrance.html'">Участвовать</button>
-            </div>
+				<!-- Блок для Rocket League -->
+				<section class="tournament-box">
+					<h3>Rocket League Турнир</h3>
+					<p>Покажи свои навыки в Rocket League и выиграй призы!</p>
+					<button onclick="window.location.href='entrance.html'">
+						Участвовать
+					</button>
+				</section>
+				<!--Блок для PUBG-->
+				<section class="tournament-box">
+					<h3>PUBG Турнир</h3>
+					<p>
+						Собери отряд, выживи и стань последним героем на поле боя в PUBG!
+					</p>
+					<button onclick="window.location.href='entrance.html'">
+						Участвовать
+					</button>
+				</section>
+				<!--Блок для Marvel Rivals-->
+				<section class="tournament-box">
+					<h3>Marvel Rivals Турнир</h3>
+					<p>
+						Объедини супергероев и сражайся за победу в эпических битвах Marvel
+						Rivals!
+					</p>
+					<button onclick="window.location.href='entrance.html'">
+						Участвовать
+					</button>
+				</section>
+				<section class="tournament-box">
+					<h3>Fortnite Турнир</h3>
+					<p>
+						Построй, сражайся и выигрывай в Fortnite, чтобы стать королём
+						королевской битвы!
+					</p>
+					<button onclick="window.location.href='entrance.html'">
+						Участвовать
+					</button>
+				</section>
+			</div>
+		</main>
 
-            <!-- Блок для Rocket League -->
-            <div class="tournament-box">
-                <h3>Rocket League Турнир</h3>
-                <p>Покажи свои навыки в Rocket League и выиграй призы!</p>
-                <button onclick="window.location.href='entrance.html'">Участвовать</button>
-            </div>
-            <div class="tournament-box">
-                <h3>PUBG Турнир</h3>
-                <p>Собери отряд, выживи и стань последним героем на поле боя в PUBG!</p>
-                <button onclick="window.location.href='entrance.html'">Участвовать</button>
-            </div>
-            <div class="tournament-box">
-                <h3>Marvel Rivals Турнир</h3>
-                <p>Объедини супергероев и сражайся за победу в эпических битвах Marvel Rivals!</p>
-                <button onclick="window.location.href='entrance.html'">Участвовать</button>
-            </div>
-            <div class="tournament-box">
-                <h3>Fortnite Турнир</h3>
-                <p>Построй, сражайся и выигрывай в Fortnite, чтобы стать королём королевской битвы!</p>
-                <button onclick="window.location.href='entrance.html'">Участвовать</button>
-            </div>
-        </div>
-    </div>
+		<footer>
+			<section class="footer-section">
+				<div class="footer-left">
+					<img src="images/LOGO.png" alt="КиберОлимп" />
+				</div>
+			</section>
+			<section class="footer-section">
+				<div class="footer-center">
+					<h3>О нас</h3>
+					<div class="footer-links">
+						<a href="forum.html">Информация</a>
+						<a href="forum.html">FAQ</a>
+						<a href="forum.html">Обзоры</a>
+					</div>
+				</div>
+			</section>
+			<section class="footer-section">
+				<div class="footer-center">
+					<h3>Поддержка</h3>
+					<div class="footer-links">
+						<ul>
+							<li><strong>Email:</strong> cyberolympgamer@yandex.ru</li>
+							<li><strong>Телефон:</strong> +7 (952) 220-00-67</li>
+							<li>
+								<strong>Часы работы:</strong> Пн-Пт, с 10:00 до 18:00 по МСК.
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+		</footer>
 
-    <footer>
-        <div class="footer-section">
-            <div class="footer-left">
-                <img src="images/LOGO.png" alt="КиберОлимп">
-            </div>
-        </div>
-        <div class="footer-section">
-            <div class="footer-center">
-                <h3>О нас</h3>
-                <div class="footer-links">
-                    <a href="forum.html">Информация</a>
-                    <a href="forum.html">FAQ</a>
-                    <a href="forum.html">Обзоры</a>
-                </div>
-            </div>
-        </div>
-        <div class="footer-section">
-            <div class="footer-center">
-                <h3>Поддержка</h3>
-                <div class="footer-links">
-                    <ul>
-                        <li><strong>Email:</strong> cyberolympgamer@yandex.ru</li>
-                        <li><strong>Телефон:</strong> +7 (952) 220-00-67</li>
-                        <li><strong>Часы работы:</strong> Пн-Пт, с 10:00 до 18:00 по МСК.</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <script>
-        // Скрипт для автоматической прокрутки слайдера
-        const images = document.querySelectorAll('.slider img');
-        let current = 0;
-
-        function slider() {
-            for (let i = 0; i < images.length; i++) {
-                images[i].classList.remove('active');
-            }
-            images[current].classList.add('active');
-            current = (current + 1) % images.length;
-        }
-      
-
-        setInterval(slider, 5000); // Меняем изображение каждые 5 секунд
-       
-    </script>
-
-</body>
+		<script src="script/main.js"></script>
+	</body>
 </html>
